--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Arabic English Dictionary</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1>Arabic ↔ English Dictionary</h1>
+
+<select id="direction">
+  <option value="ar-en">Arabic → English</option>
+  <option value="en-ar">English → Arabic</option>
+</select>
+
+<input type="text" id="search" placeholder="Type a word...">
+
+<div id="result"></div>
+
+<script src="script.js"></script>
+</body>
+</html>
 
