--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 <h1>Arabic ↔ English Dictionary</h1>
 
-<select id="direction">
-  <option value="ar-en">Arabic → English</option>
-  <option value="en-ar">English → Arabic</option>
-</select>
+<div class="controls">
+  <select id="direction">
+    <option value="ar-en">Arabic → English</option>
+    <option value="en-ar">English → Arabic</option>
+  </select>
 
-<input type="text" id="search" placeholder="Type a word...">
+  <input type="text" id="search" placeholder="Type a word...">
+</div>
 
 <div id="result"></div>
 
