--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Arabic English Dictionary</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dictionary</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>Arabic ↔ English Dictionary</h1>
+  <input id="search" placeholder="Search..." />
 
-<div class="controls">
-  <select id="direction">
-    <option value="ar-en">Arabic → English</option>
-    <option value="en-ar">English → Arabic</option>
-  </select>
+  <div id="results"></div>
 
-  <input type="text" id="search" placeholder="Type a word...">
-</div>
-
-<div id="result"></div>
-
-<script src="script.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
