--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dictionary</title>
- <link rel="stylesheet" href="style.css">
+  <title>Arabic–English Dictionary</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Title (used for the secret Easter egg) -->
+  <h1 id="title">Arabic–English Dictionary</h1>
+
+  <!-- Search bar -->
   <input id="search" placeholder="Search..." />
 
+  <!-- Results container -->
   <div id="results"></div>
 
+  <!-- Script -->
   <script src="script.js" defer></script>
+
 </body>
 </html>
